--- a/Slider/Slider.html
+++ b/Slider/Slider.html
@@ -21,7 +21,9 @@
         <input type="range" min="0" max="256" value="100" class="slider" id="green" orient="vertical">
         <input type="range" min="0" max="256" value="20" class="slider" id="blue" orient="vertical">
     </div>
-    <div class="screen"></div>
+    <div class="screen">
+        yes making it this time
+    </div>
     <script src="Slider.js"></script>
 <footer>
 </footer>
