--- a/Web/Web.html
+++ b/Web/Web.html
@@ -7,6 +7,22 @@
         <link href="Web.css" rel="stylesheet"/>
     </head>
     <body>
-        <p>Test</p>
+        <div class="title">
+            <p>Some image</p>
+        </div>
+        <hr>
+        <div class="resume">
+            <p>Some information about myself</p>
+        </div>
+        <hr>
+        <div class="portfolio">
+            <p>There will be some my portfolio</p>
+        </div>
+        <hr>
     </body>
+    <footer>
+        <div>
+            <p>there will be some icons about my githyb and linkedin</p>
+        </div>
+    </footer>
 </html>
