website going good

--- a/Web/Web.html
+++ b/Web/Web.html
@@ -13,13 +13,13 @@
 
     <body>
         <div class="icon">
-            <p>icon</p>
+           <img src="raven.png" alt="raven-icon" height="50px" width="50px">
         </div>
         <hr>
         <section>
             <div class="cv">
-                <p>the CV will be here</p>
-                <!--<img src="cv-image.png" alt="bacground-image" style="width: 450px" height="600px">-->
+                <img src="pp.jpg" alt="My profile picture" id="pp">
+                <br><p>My name is Mehmed , i like bithces</p>
             </div>
         </section>
         <hr class="line">
@@ -28,13 +28,12 @@
                 <p>there will be the portfolio</p>
             </div>
         </section>
+        <hr>
+
+        <footer>
+            <div class="footer">
+                <p>there will be my linkedin and github</p> 
+            </div>
+        </footer>
     </body>
-    <hr>
-
-    <footer>
-        <div class="footer">
-            <p>there will be my linkedin and github</p> 
-        </div>
-    </footer>
-
 </html>
