--- a/Web/Web.html
+++ b/Web/Web.html
@@ -16,10 +16,27 @@
            <img src="raven.png" alt="raven-icon" height="50px" width="50px">
         </div>
         <hr>
-        <section>
+        <section class="wrapper">
+            <div class="tech">
+                <h2>Technologies</h2>
+            </div>
             <div class="cv">
                 <img src="pp.jpg" alt="My profile picture" id="pp">
-                <br><p>My name is Mehmed , i like bithces</p>
+                <br><p>My name is Mehmed</p>  
+                <br><p>Web Develooper</p>
+                <p class="p1">I am a motivated Computer Science student with a keen interest in web development.
+                    Skilled in HTML, CSS, JavaScript, Java, SQL, and database management,
+                    I have completed several personal projects. I possess strong communication skills and am 
+                    committed to continuous learning and adaptation to new technologies.
+                    I excel in dynamic environments and enjoy staying updated with the latest industry trends
+                    to deliver innovative solutions to clients.</p>
+                <br> 
+                <h2>
+                    Education
+                </h2>       
+            </div>
+            <div class="exp">
+                <h2>Experience</h2>
             </div>
         </section>
         <hr class="line">
