--- a/Web/Web.html
+++ b/Web/Web.html
@@ -19,37 +19,76 @@
         <section class="wrapper">
             <div class="tech">
                 <h2>Technologies</h2>
+                    <li id="a">HTML5</li>
+                    <li id="a">CSS3</li>
+                    <li id="a">JavaScript</li>
+                    <li id="a">Java</li>
+                    <li id="a">SQL</li>
             </div>
             <div class="cv">
                 <img src="pp.jpg" alt="My profile picture" id="pp">
                 <br><p>My name is Mehmed</p>  
-                <br><p>Web Develooper</p>
+                <p>Web Developer</p>
                 <p class="p1">I am a motivated Computer Science student with a keen interest in web development.
                     Skilled in HTML, CSS, JavaScript, Java, SQL, and database management,
                     I have completed several personal projects. I possess strong communication skills and am 
                     committed to continuous learning and adaptation to new technologies.
                     I excel in dynamic environments and enjoy staying updated with the latest industry trends
-                    to deliver innovative solutions to clients.</p>
+                    to deliver innovative solutions.</p>
                 <br> 
                 <h2>
                     Education
-                </h2>       
+                </h2><br>
+                <p>Erasmus - Bachelor in Software Engineering
+                    University of West Bohemia, Czech Republic
+                    2024
+                    (Less than a year)
+                    Bachelor of Computer Science and Engineering
+                    Burgaski svoboden universitet, Bulgaria
+                    2020 - 2024
+                    (4 years)</p>       
             </div>
             <div class="exp">
                 <h2>Experience</h2>
+                <p>Part-Time Employment App Development
+                    <br>
+                    <br> Freelance
+                    <br>
+                    <br> Mar 2024 - Present
+                    <br>
+                    <br>  Contributing to Uniend, a web app like LinkedIn for student part-time jobs.
+                        I design secure MySQL databases to store user data and communication history.
+                        Using Jira for task management and Python for real-time chat API.
+                        Excited to apply my skills in database dev, project management, and communication for outstanding results!</p>
             </div>
         </section>
         <hr class="line">
-        <section>
-            <div class="portfolio">
-                <p>there will be the portfolio</p>
+        <section class="wrapper2">
+            <div class="g1">
+                <p>s</p>
+            </div>
+            <div class="g2">
+                <p>u</p>
+            </div>
+            <div class="g3">
+                <p>c</p>
+            </div>
+            <div class="g4">
+                <p>k</p>
+            </div>
+            <div class="g5">
+                <p>dicks</p>
+            </div>
+            <div class="g6">
+                <p>bitch</p>
             </div>
         </section>
         <hr>
 
         <footer>
             <div class="footer">
-                <p>there will be my linkedin and github</p> 
+                    <img id="ln" src="linkedin.png" alt="linkedin-icon" height="40px" width="40px">
+                    <img id="gh" src="github-sign.png" alt="github-icon" height="40px" width="40px">
             </div>
         </footer>
     </body>
