--- a/FlexboxGallery/index.html
+++ b/FlexboxGallery/index.html
@@ -20,3 +20,5 @@
       <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
       <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
       <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+
+      <!--to be updated soon-->
